--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,11 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<!-- Driver JDBC do MySQL -->
+		<!-- Driver do H2DB -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
-			<scope>compile</scope>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.200</version>
 		</dependency>
     
 		<!-- Mojarra (implementacao do JSF) -->
